--- a/markdown/20220422.md
+++ b/markdown/20220422.md
@@ -11,7 +11,7 @@ Author: s40723207
 
 <script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"></script>
 
-期中考
+w8期中考
 ---
 
 <script>
